main: Add code that kind of works with printed cheat sheet

--- a/robiniminimax/robiniminimax.vcxproj
+++ b/robiniminimax/robiniminimax.vcxproj
@@ -19,10 +19,14 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\MiniMax.h" />
+    <ClCompile Include="src\GameState.cpp" />
+    <ClCompile Include="src\GameTree.cpp" />
+    <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\MiniMax.cpp" />
+    <ClInclude Include="src\Consts.h" />
+    <ClInclude Include="src\GameState.h" />
+    <ClInclude Include="src\GameTree.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
