--- a/robiniminimax/robiniminimax.vcxproj.filters
+++ b/robiniminimax/robiniminimax.vcxproj.filters
@@ -14,21 +14,12 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\GameState.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\GameTree.cpp">
+    <ClCompile Include="src\Nim.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Consts.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\GameState.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\GameTree.h">
+    <ClInclude Include="src\Nim.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
